# agent

./: CLAUDE.md  Cargo.toml  README.md  config.toml.example  ixforge-agent.service
.github/workflows/: ci.yml
docker/: docker-compose.test.yml
docker/bird/: Dockerfile  bird.conf  entrypoint.sh
docs/plans/: 2026-02-12-ixforge-agent-v01.md
src/: config.rs  core_client.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src/bird/: manager.rs  mod.rs  parser.rs  socket.rs
src/metrics/: mod.rs  registry.rs  server.rs  system.rs
tests/: bird_parser_test.rs  config_test.rs  core_client_test.rs  health_test.rs  integration_test.rs
