[package]
name = "ixforge-agent"
version = "0.1.0"
edition = "2024"
description = "IXForge route server agent - manages BIRD configurations and reports BGP state"
license = "Apache-2.0"
repository = "https://github.com/ixforge/agent"

[[bin]]
name = "ixforge-agent"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus-client = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
